force-app/main/default/objects/API_Exception_Log__c/API_Exception_Log__c.object-meta.xml
<CustomObject>
    <description>Persistent record of API / integration exceptions raised by outbound and inbound callout paths (Jira, etc.). One row per error so support can report on, filter by API, and triage. Cleanup is opt-in via existing LogCleanupContext CMDT; no scheduled archive by default.</description>
    <label>API Exception Log</label>
    <nameField>
        <displayFormat>AEL-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Exception Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>