force-app/main/default/objects/API_Exception_Log__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>Logical name of the API / integration that raised the error (e.g. JCFS, Slack, Workday). Filterable.</description>
    <label>API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unicode>false</unicode>
</CustomField>