force-app/main/default/objects/API_Exception_Log__c/fields/Do_Not_Delete__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Compatibility flag for LogCleanupBatch when scheduled retention is eventually turned on for this object. Mark TRUE to pin a row permanently.</description>
    <label>Do Not Delete</label>
    <type>Checkbox</type>
</CustomField>