force-app/main/default/objects/API_Exception_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description
  >Class name of the original Apex exception (DmlException, CalloutException, etc.). Blank when the error path was a non-exception condition.</description>
    <label>Exception Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>