force-app/main/default/objects/API_Exception_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Human-readable summary of the failure.</description>
    <label>Message</label>
    <length>32768</length>
    <required>true</required>
    <type>LongTextArea</type>
</CustomField>