force-app/main/default/objects/API_Exception_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description
  >Specific method, endpoint, or step that failed (e.g. JCFS.API.pushUpdatesToJira, EventBus.publish).</description>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>