force-app/main/default/objects/API_Exception_Log__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>ERROR (default) | WARN | FATAL. Most rows will be ERROR.</description>
    <label>Severity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
                <default>true</default>
                <label>ERROR</label>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>FATAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>