force-app/main/default/objects/API_Exception_Log__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description
  >API name of the SObject the failed operation was about (e.g. Opportunity, Case). Polymorphic - left as Text rather than a lookup.</description>
    <label>Source Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>