force-app/main/default/objects/API_Exception_Log__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <description
  >Id of the source record (Opportunity, Case, etc.) that the failed operation was about.</description>
    <externalId>true</externalId>
    <label>Source Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>