force-app/main/default/objects/API_Exception_Log__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description
  >System.Request.getCurrent().getRequestId() at the time of failure. Matches Jira_Push_Request__e.Transaction_Id__c for cross-system correlation.</description>
    <externalId>true</externalId>
    <label>Transaction Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>